# Nansen_SmartMoney_Tracking

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  simple_bot.py
docs/: Nansen_Collector_SPEC.md  Nansen_SmartMoney_Collector_FullPlan.md  SmartMoneyGuide_TW.md
reports/: phase1_latest.md
scripts/: run_loop.py  start_collector.sh  start_dashboard_bot.sh  test_netflow_range.py  token_screener.py  zeroex_trade.py
src/nansen_sm_collector/: __init__.py  __main__.py
src/nansen_sm_collector.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/nansen_sm_collector/adapters/: __init__.py  debank_cloud.py  gecko_terminal.py  glassnode_llama.py  mock_nansen.py  nansen_api.py  news_cryptopanic.py
src/nansen_sm_collector/backtest/: runner.py
src/nansen_sm_collector/bot/: __init__.py  main.py
src/nansen_sm_collector/broker/: adapter.py
src/nansen_sm_collector/cli/: app.py  gates.py
src/nansen_sm_collector/collectors/: enrich.py  filters.py  normalize.py  pipeline.py  scorer.py
src/nansen_sm_collector/config/: settings.py  validators.py
src/nansen_sm_collector/core/: errors.py  logging.py  types.py  utils.py
src/nansen_sm_collector/data/: db.py  repos.py  schemas.py
src/nansen_sm_collector/monitoring/: metrics.py
src/nansen_sm_collector/reports/: generator.py
src/nansen_sm_collector/risk/: manager.py
src/nansen_sm_collector/services/: local_pipeline_runner.py  telegram_notifier.py  token_market_data.py  (+5 more)
tests/integration/: test_pipeline.py
tests/unit/: test_settings.py  test_zeroex_trading.py
(+3 files in other folders)
