[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nansen-sm-collector"
version = "0.1.0"
description = "Modular pipeline for Nansen Smart Money signal collection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Smart Money Team"}
]
dependencies = [
  "alembic>=1.13",
  "httpx>=0.25",
  "pydantic>=2.5",
  "pydantic-settings>=2.1",
  "python-dotenv>=1.0",
  "sqlalchemy>=2.0",
  "structlog>=23.1",
  "tenacity>=8.2",
  "typer>=0.9",
  "rich>=13.7",
  "web3>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.21",
  "pytest-cov>=4.1",
  "responses>=0.23",
  "freezegun>=1.4",
  "mypy>=1.7",
  "ruff>=0.1.6",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.coverage.run]
source = ["nansen_sm_collector"]
branch = true
